# chatgpt_Repo

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  __main__.py  audio.py  config.py  main.py  output.py  system_tray.py  transcriber.py  ui.py
inteliautomake/: data - copia.js  data.js  index.html  index.html actual
inteliautomake/Edicion/: index_hero_ready.html  index_updated_hero.html  main_updated_hero.js  styles.css  styles_hero_fixed.css  styles_updated_hero.css
inteliautomake/Edicion/js/: main.js  ui.js  ui.jsOrig Ok  utils.js
inteliautomake/Edicion/src/: App.tsx  index.css
inteliautomake/Edicion/src/components/: ChatBot.tsx  ContactForm.tsx  ImageCarousel.tsx
inteliautomake/Edicion/src/data/: projects.ts  services.ts
inteliautomake/js/: data.js  forms.js  ui.js
inteliautomake/public/: index.html
numpy/: __init__.py
tests/: test_config.py  test_output.py  test_transcriber.py
