[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live-transcriber"
version = "0.1.0"
description = "Live speech to text assistant for Windows"
authors = [{name = "Live Transcriber"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "pyaudio>=0.2.13; platform_system == 'Windows'",
    "pywin32>=306; platform_system == 'Windows'",
    "keyboard>=0.13.5",
    "pyautogui>=0.9.53",
    "PySide6>=6.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]
